CHANGELOG
=========


1.1.5 (unreleased)
------------------

- Nothing changed yet.


1.1.4 (2012-03-05)
------------------

- Use a list instead of a table to display billboardcategory-listing.
  [Julian Infanger]

- Added default class to table in billboardcategory view.
  [Julian Infanger]


1.1.3 (2011-12-21)
------------------

- fix manifest.in


1.1.2 (2011-12-21)
------------------

- add assignments for action-portlet
  [eschmutz]


1.1.1 (2011-08-11)
------------------

- check if effective date is < 1900 before toLocalizedTime
  [jinfanger]


1.1 (2011-02-25)
----------------

- Added support for LinguaPlone.
  [buchi]

- Some refactoring and cleanup.
  [buchi]


1.0.2
-----

- delete images and files in view, updated permission in workflow
  [jinfanger]

- created simple_image_upload and simple_file_upload
  [jinfanger]

- added translations, created action portlet
  [jinfanger]

- created workflow for ad and category
  [jinfanger]

- refactoring views
  [jinfanger]


1.0.1
---

- fix permissions for views


1.0
---

- first final release


0.1
---

- Removed AnnotationStorage from some fields
  [jbaumann]

- initial version