@@ -1,0 +1,9 @@
+<registry>
+    <record name="ftw.billboard.days_to_expire">
+        <field type="plone.registry.field.Int">
+            <title>Ads default expires</title>
+            <description>How many days is a ad public by default?</description>
+        </field>
+        <value>30</value>
+    </record>
+</registry>
