@@ -5,7 +5,8 @@ CHANGELOG
 1.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- The default expiration date can be defined in registry.
+  [Julian Infanger]
 
 
 1.1.4 (2012-03-05)
